Fix companies page header

--- a/crm/index.html
+++ b/crm/index.html
@@ -460,7 +460,7 @@
 
       <!-- Shops -->
       <section class="page" id="page-shops">
-        <div class="page-header"><div style="display:flex;align-items:center;gap:12px"><h1>☕ Companies</h1><span class="badge-count" id="shops-total-badge">0</span></div><button class="btn btn-primary" onclick="openShopModal()">+ Add Company</button></div> onclick="openShopModal()">+ Add Company</button></div>
+        <div class="page-header"><div style="display:flex;align-items:center;gap:12px"><h1>☕ Companies</h1><span class="badge-count" id="shops-total-badge">0</span></div><button class="btn btn-primary" onclick="openShopModal()">+ Add Company</button></div>
         <div class="filter-bar">
           <div class="filter-row">
             <div class="filter-group"><label>Search</label><input type="text" class="search-input" placeholder="Search database..." id="shop-search" oninput="debounceSearch(this.value)"></div>
