Fix lifecycle labels and deal modal default tab

--- a/crm/index.html
+++ b/crm/index.html
@@ -464,7 +464,7 @@
         <div class="filter-bar">
           <div class="filter-row">
             <div class="filter-group"><label>Search</label><input type="text" class="search-input" placeholder="Search database..." id="shop-search" oninput="debounceSearch(this.value)"></div>
-            <div class="filter-group"><label>Lifecycle</label><select class="filter-select" id="shop-lifecycle-filter" onchange="applyShopFilters()"><option value="">All</option><option value="leads">🎯 Leads Only</option><option value="partner">☕ Partners</option><option value="prospect">Prospect</option><option value="lead">Lead</option><option value="opportunity">Opportunity</option><option value="customer">Customer</option><option value="churned">Churned</option></select></div>
+            <div class="filter-group"><label>Lifecycle</label><select class="filter-select" id="shop-lifecycle-filter" onchange="applyShopFilters()"><option value="">All</option><option value="leads">🎯 Leads Only</option><option value="partner">☕ Partners</option><option value="lead">Lead</option><option value="prospect">Prospect</option><option value="opportunity">Opportunity</option><option value="churned">Churned</option></select></div>
             <div class="filter-group"><label>City</label><div class="multi-select" id="city-filter"><div class="multi-select-trigger" onclick="toggleDropdown('city-filter')"><span>All Cities</span><span>▼</span></div><div class="multi-select-dropdown" id="city-dropdown"></div></div></div>
             <div class="filter-group"><label>State</label><div class="multi-select" id="state-filter"><div class="multi-select-trigger" onclick="toggleDropdown('state-filter')"><span>All States</span><span>▼</span></div><div class="multi-select-dropdown" id="state-dropdown"></div></div></div>
             <div class="filter-group"><label>Stage</label><div class="multi-select" id="stage-filter"><div class="multi-select-trigger" onclick="toggleDropdown('stage-filter')"><span>All Stages</span><span>▼</span></div><div class="multi-select-dropdown" id="stage-dropdown"></div></div></div>
@@ -976,13 +976,13 @@
       </div>
       <div class="modal-body" style="padding:0">
         <div class="modal-tabs" style="padding:0 20px;border-bottom:1px solid #e5e7eb">
-          <button class="modal-tab active" data-tab="timeline">Timeline</button>
-          <button class="modal-tab" data-tab="details">Details</button>
+          <button class="modal-tab" data-tab="timeline">Timeline</button>
+          <button class="modal-tab active" data-tab="details">Details</button>
           <button class="modal-tab" data-tab="tasks">Tasks</button>
         </div>
         
         <!-- Timeline Tab -->
-        <div class="modal-tab-content active" id="deal-tab-timeline" style="padding:20px">
+        <div class="modal-tab-content" id="deal-tab-timeline" style="padding:20px">
           <div style="display:flex;gap:8px;margin-bottom:16px;flex-wrap:wrap">
             <button class="btn btn-small btn-secondary" onclick="logDealActivity('call')">📞 Log Call</button>
             <button class="btn btn-small btn-secondary" onclick="logDealActivity('email')">✉️ Log Email</button>
@@ -994,7 +994,7 @@
         </div>
         
         <!-- Details Tab -->
-        <div class="modal-tab-content" id="deal-tab-details" style="padding:20px;max-height:60vh;overflow-y:auto">
+        <div class="modal-tab-content active" id="deal-tab-details" style="padding:20px;max-height:60vh;overflow-y:auto">
           <!-- Deal Info Section -->
           <h4 style="margin-bottom:12px;color:var(--joe-black)">💰 Deal Info</h4>
           <div class="form-grid" style="margin-bottom:24px">
