Move Show Partners toggle to filter bar

--- a/crm/index.html
+++ b/crm/index.html
@@ -471,7 +471,7 @@
             <div class="filter-group"><label>Score</label><select class="filter-select" id="shop-score-filter" onchange="applyShopFilters()"><option value="">Any</option><option value="80">Hot (80+)</option><option value="60">Warm (60+)</option></select></div>
             <div class="filter-group"><label>Owner</label><select class="filter-select" id="shop-owner-filter" onchange="applyShopFilters()"><option value="">Anyone</option><option value="mine">Mine</option></select></div>
             <div class="filter-group"><label>Source</label><select class="filter-select" id="shop-source-filter" onchange="filterBySource(this.value)"><option value="">All</option><option value="inbound">Inbound</option><option value="outbound">Outbound</option></select></div>
-            <div class="filter-group"><label>&nbsp;</label><button class="clear-filters" onclick="clearAllShopFilters()">Clear</button></div>
+            <div class="filter-group"><label>Map</label><label style="display:flex;align-items:center;gap:4px;cursor:pointer"><input type="checkbox" id="show-partners-toggle" checked onchange="renderMapMarkers()"> Show Partners</label></div><div class="filter-group"><label>&nbsp;</label><button class="clear-filters" onclick="clearAllShopFilters()">Clear</button></div>
             <span class="results-count" id="shop-count">0 companies</span>
           </div>
           <div class="filter-tags" id="filter-tags"></div>
@@ -486,7 +486,7 @@
                   <span style="display:flex;align-items:center;gap:4px"><span style="width:10px;height:10px;background:#f59e0b;border-radius:50%"></span> Hot</span>
                   <span style="display:flex;align-items:center;gap:4px"><span style="width:10px;height:10px;background:#3b82f6;border-radius:50%"></span> Warm</span>
                   <span style="display:flex;align-items:center;gap:4px"><span style="width:10px;height:10px;background:#6b7280;border-radius:50%"></span> Cold</span>
-                  <label style="display:flex;align-items:center;gap:4px;margin-left:8px;cursor:pointer"><input type="checkbox" id="show-partners-toggle" checked onchange="renderMapMarkers()"> Show Partners</label>
+                  
                   <button onclick="refreshMapData()" style="margin-left:8px;padding:2px 8px;font-size:11px;border:1px solid #ddd;border-radius:4px;background:#fff;cursor:pointer" title="Refresh map data">↻</button>
                 </div>
               </div>
