Add data quality filter to contacts

--- a/crm/index.html
+++ b/crm/index.html
@@ -506,7 +506,7 @@
           </div>
           <button class="btn btn-primary" onclick="openContactModal()">+ Add Contact</button>
         </div>
-        <div class="filter-bar" style="flex-wrap:wrap;gap:8px">
+        <div class="filter-bar" style="flex-wrap:wrap;gap:8px;align-items:center">
           <input type="text" class="search-input" placeholder="Search name, email, company..." id="contact-search" oninput="renderContacts()" style="min-width:200px">
           <select class="filter-select" id="contact-owner-filter" onchange="renderContacts()">
             <option value="">All Owners</option>
@@ -527,7 +527,7 @@
             <option value="90">Last 90 days</option>
             <option value="inactive">No activity</option>
           </select>
-          <span class="results-count" id="contact-count">Showing 0</span>
+          <select class="filter-select" id="contact-data-filter" onchange="renderContacts()"><option value="">All Data</option><option value="has-email">Has Email</option><option value="has-name">Has Name</option><option value="no-name">Missing Name</option><option value="has-company">Has Company</option></select><span class="results-count" id="contact-count">Showing 0</span>
         </div>
         <div class="card" style="overflow-x:auto">
           <table>
