Add data quality filter to contacts

--- a/crm/index.html
+++ b/crm/index.html
@@ -2438,6 +2438,13 @@ function renderDeals(){
           if(activity==='90'&&daysSince>90)return false;
           if(activity==='inactive'&&lastDate)return false;
         }
+        const dataFilter=document.getElementById('contact-data-filter')?.value;
+        if(dataFilter){
+          if(dataFilter==='has-email'&&!c.email)return false;
+          if(dataFilter==='has-name'&&!c.first_name&&!c.last_name)return false;
+          if(dataFilter==='no-name'&&(c.first_name||c.last_name))return false;
+          if(dataFilter==='has-company'&&!c.shop_id&&!c.company_id)return false;
+        }
         return true;
       });
       f.sort((a,b)=>{
