--- a/crm/index.html
+++ b/crm/index.html
@@ -2664,7 +2664,7 @@ function renderDeals(){
     async function saveCompany(){const d={name:document.getElementById('company-name').value,city:document.getElementById('company-city').value,state:document.getElementById('company-state').value,phone:document.getElementById('company-phone').value,website:document.getElementById('company-website').value,assigned_to:document.getElementById('company-assigned').value||null};if(currentCompanyId){await db.from('companies').update(d).eq('id',currentCompanyId);Object.assign(companies.find(c=>c.id===currentCompanyId),d);}else{const{data:n}=await db.from('companies').insert([d]).select().single();if(n)companies.push(n);}closeCompanyModal();renderCompanies();populateDropdowns();showToast('Saved!');}
 
     // Deals
-    function openDealModal(id){
+    async function openDealModal(id){
       currentDealId=id||null; 
       const deleteBtn=document.getElementById('deal-delete-btn');
       if(deleteBtn)deleteBtn.style.display=id?'inline-flex':'none';
@@ -2677,13 +2677,18 @@ function renderDeals(){
         const d=deals.find(x=>x.id===id);
         const ct=contacts.find(c=>c.id===d.contact_id);
         const co=d.shop_id?shops.find(c=>c.id===d.shop_id):(d.company_id?(shops.find(c=>c.id===d.company_id)||companies.find(c=>c.id===d.company_id)):(ct?(shops.find(c=>c.id===ct.company_id)||companies.find(c=>c.id===ct.company_id)):null));
+        let shopName='';
+        if(d.shop_id && !co){
+          const{data:shopData}=await db.from('shops').select('name').eq('id',d.shop_id).single();
+          if(shopData)shopName=shopData.name;
+        }
         document.getElementById('deal-modal-title').textContent=d.name;
         document.getElementById('deal-header-meta').innerHTML=ct?`${ct.first_name} ${ct.last_name}${co?' • '+co.name:''}`:(co?co.name:'');
         document.getElementById('deal-name').value=d.name||'';
         document.getElementById('deal-amount').value=d.amount||'';
         document.getElementById('deal-close-date').value=d.close_date||'';
         document.getElementById('deal-company').value=d.shop_id||d.company_id||(ct?.company_id)||'';
-        document.getElementById('deal-company-search').value=co?.name||'';
+        document.getElementById('deal-company-search').value=co?.name||shopName||''
         document.getElementById('deal-contact').value=d.contact_id||'';
         document.getElementById('deal-contact-search').value=ct?ct.first_name+' '+ct.last_name:'';
         document.getElementById('deal-pipeline').value=d.pipeline_id||pipelines[0]?.id||'';
