Fix deal page template literals and stage dropdown

--- a/crm/index.html
+++ b/crm/index.html
@@ -2743,7 +2743,7 @@ function renderDeals(){
         // Populate pipeline dropdown
         document.getElementById('deal-page-pipeline').innerHTML=pipelines.map(p=>`<option value="${p.id}"${p.id===d.pipeline_id?' selected':''}>${p.name}</option>`).join('');
         updateDealPageStageOptions();
-        document.getElementById('deal-page-stage').value=d.stage||'';
+        setTimeout(()=>document.getElementById('deal-page-stage').value=d.stage||'',0);
         
         // Populate assigned dropdown
         document.getElementById('deal-page-assigned').innerHTML=`<option value="">Unassigned</option>`+teamMembers.map(t=>`<option value="${t.email}"${t.email===d.assigned_to?' selected':''}>${t.name||t.email}</option>`).join('');
@@ -2765,7 +2765,6 @@ function renderDeals(){
         
         navigateTo('deal-view');
       }
-
       function updateDealPageStageOptions(){
         const pipelineId=document.getElementById('deal-page-pipeline').value;
         const stages=pipelineStages.filter(s=>s.pipeline_id===pipelineId).sort((a,b)=>a.position-b.position);
