Add deal search

--- a/crm/index.html
+++ b/crm/index.html
@@ -552,6 +552,7 @@
         <div class="page-header">
           <h1>💰 Deals</h1>
           <div style="display:flex;gap:12px;align-items:center">
+            <input type="text" id="deals-search" placeholder="🔍 Search deals..." oninput="renderDeals()" style="padding:8px 12px;border:1px solid #ddd;border-radius:6px;width:200px;font-size:13px">
             <select class="filter-select" id="deals-owner-filter" onchange="renderDeals()" style="min-width:120px">
               <option value="">All Deals</option>
               <option value="mine">My Deals</option>
