Add visitor_id to test form for website activity linking

--- a/crm/test.html
+++ b/crm/test.html
@@ -212,7 +212,8 @@
                         target_launch_date: document.getElementById('target_launch_date').value,
                         was_referred: document.getElementById('was_referred').value,
                         referred_by: document.getElementById('referred_by').value,
-                        how_did_you_hear: howDidYouHear
+                        how_did_you_hear: howDidYouHear,
+                        visitor_id: localStorage.getItem('joe_visitor_id')
                     };
 
                     console.log('Submitting:', formData);
