Fix async showDealPage function

--- a/crm/index.html
+++ b/crm/index.html
@@ -2950,7 +2950,7 @@ function renderContactActivities(id){const a=activities.filter(x=>x.contact_id==
         showToast('Shop details saved!', 'success');
       }
 
-function showDealPage(id){
+async function showDealPage(id){
         currentDealId=id;
         const d=deals.find(x=>x.id===id);
         if(!d)return;
