Fix shop details field references

--- a/crm/index.html
+++ b/crm/index.html
@@ -2973,9 +2973,9 @@ async function showDealPage(id){
         
         document.getElementById('deal-page-amount').value=d.amount||'';
         document.getElementById('deal-page-close-date').value=d.close_date||'';
-        document.getElementById('deal-page-coffee-type').value=d.coffee_shop_type||'';
-        document.getElementById('deal-page-revenue').value=d.monthly_revenue||'';
-        document.getElementById('deal-page-quantity').value=d.quantity||'';
+        document.getElementById('deal-page-coffee-type').value=shop?.coffee_shop_type||'';
+        document.getElementById('deal-page-revenue').value=shop?.monthly_revenue||'';
+        document.getElementById('deal-page-locations').value=shop?.num_locations||'';
         
         // Company - show linked shop
         currentDealShopId=d.shop_id||null;
