Fix deal page timeline element

--- a/crm/index.html
+++ b/crm/index.html
@@ -847,6 +847,8 @@
               <h4 style="font-size:13px;font-weight:600;color:#666;margin-bottom:8px">🌐 Website Activity</h4>
               <div id="deal-page-web-activity" style="max-height:150px;overflow-y:auto;background:#fafafa;border-radius:6px"></div>
             </div>
+            <div class="card-body" id="deal-page-timeline" style="max-height:calc(100vh - 300px);overflow-y:auto"></div>
+            </div>
             
           </div>
           
