Add deal search filter logic

--- a/crm/index.html
+++ b/crm/index.html
@@ -2310,6 +2310,7 @@ async function deleteStage(id){
   renderStagesList();renderDeals();showToast('Stage deleted');
 }
 function renderDeals(){
+  const searchTerm=(document.getElementById('deals-search')?.value||'').toLowerCase();
   const owner=document.getElementById('deals-owner-filter')?.value;
   let fd=deals.filter(d=>d.pipeline_id===currentPipelineId);
   if(owner==='mine')fd=fd.filter(d=>d.assigned_to===currentUser?.email);
