Fix deal stage matching to be case-insensitive

--- a/crm/index.html
+++ b/crm/index.html
@@ -2325,7 +2325,7 @@ function renderDeals(){
   }
   
   document.getElementById('deals-pipeline').innerHTML=stages.map(st=>{
-    const sd=fd.filter(d=>d.stage===st.stage_key);
+    const sd=fd.filter(d=>d.stage===st.stage_key||d.stage===st.name||d.stage?.toLowerCase()===st.stage_key?.toLowerCase());
     const tot=sd.reduce((s,d)=>s+(d.amount||0),0);
     return`<div class="pipeline-column" data-stage="${st.stage_key}" style="border-top:3px solid ${st.color||'#6b7280'}" ondragover="onDragOver(event)" ondrop="onDropDeal(event)"><div class="pipeline-header"><h3>${st.name}</h3><span class="pipeline-count">${sd.length} · $${tot.toLocaleString()}</span></div>${sd.map(d=>{
       const ct=contacts.find(c=>c.id===d.contact_id);
