Fetch all shop fields when loading deal page

--- a/crm/index.html
+++ b/crm/index.html
@@ -2946,7 +2946,7 @@ async function showDealPage(id){
         // Fetch shop from DB if not in memory
         let shop=shops.find(s=>s.id===d.shop_id);
         if(!shop && d.shop_id){
-          const {data}=await db.from('shops').select('id,name,city,state').eq('id',d.shop_id).single();
+          const {data}=await db.from('shops').select('*').eq('id',d.shop_id).single();
           shop=data;
         }
         document.getElementById('deal-page-meta').innerHTML=shop?`<span class="clickable" onclick="openShopModal('${shop.id}')">${shop.name}</span> • Created ${formatDate(d.created_at)}`:`Created ${formatDate(d.created_at)}`;
