Add # locations and current POS to test form

--- a/crm/test.html
+++ b/crm/test.html
@@ -122,6 +122,35 @@
                 </div>
             </div>
             
+            <div class="form-row">
+                <div class="form-group">
+                    <label for="num_locations"># of Locations <span class="required">*</span></label>
+                    <select id="num_locations" name="num_locations" required>
+                        <option value="">Please Select</option>
+                        <option value="1">1</option>
+                        <option value="2">2</option>
+                        <option value="3-5">3-5</option>
+                        <option value="6-10">6-10</option>
+                        <option value="11+">11+</option>
+                    </select>
+                </div>
+                <div class="form-group">
+                    <label for="current_pos">Current POS System</label>
+                    <select id="current_pos" name="current_pos">
+                        <option value="">Please Select</option>
+                        <option value="Square">Square</option>
+                        <option value="Toast">Toast</option>
+                        <option value="Clover">Clover</option>
+                        <option value="Lightspeed">Lightspeed</option>
+                        <option value="Revel">Revel</option>
+                        <option value="TouchBistro">TouchBistro</option>
+                        <option value="SpotOn">SpotOn</option>
+                        <option value="None">None / Cash Only</option>
+                        <option value="Other">Other</option>
+                    </select>
+                </div>
+            </div>
+            
             <div class="form-group">
                 <label for="target_launch_date">Target launch date:</label>
                 <input type="date" id="target_launch_date" name="target_launch_date">
@@ -213,6 +242,8 @@
                         was_referred: document.getElementById('was_referred').value,
                         referred_by: document.getElementById('referred_by').value,
                         how_did_you_hear: howDidYouHear,
+                        num_locations: document.getElementById('num_locations').value,
+                        current_pos: document.getElementById('current_pos').value,
                         visitor_id: localStorage.getItem('joe_visitor_id')
                     };
 
