--- a/crm/test.html
+++ b/crm/test.html
@@ -129,9 +129,9 @@
                         <option value="">Please Select</option>
                         <option value="1">1</option>
                         <option value="2">2</option>
-                        <option value="3-5">3-5</option>
-                        <option value="6-10">6-10</option>
-                        <option value="11+">11+</option>
+                        <option value="3">3</option><option value="4">4</option><option value="5">5</option>
+                        <option value="6">6-10</option>
+                        <option value="10">10+</option>
                     </select>
                 </div>
                 <div class="form-group">
@@ -151,34 +151,6 @@
                 </div>
             </div>
             
-            <div class="form-row">
-                <div class="form-group">
-                    <label for="num_locations"># of Locations <span class="required">*</span></label>
-                    <select id="num_locations" name="num_locations" required>
-                        <option value="">Please Select</option>
-                        <option value="1">1</option>
-                        <option value="2">2</option>
-                        <option value="3-5">3-5</option>
-                        <option value="6-10">6-10</option>
-                        <option value="11+">11+</option>
-                    </select>
-                </div>
-                <div class="form-group">
-                    <label for="current_pos">Current POS System</label>
-                    <select id="current_pos" name="current_pos">
-                        <option value="">Please Select</option>
-                        <option value="Square">Square</option>
-                        <option value="Toast">Toast</option>
-                        <option value="Clover">Clover</option>
-                        <option value="Lightspeed">Lightspeed</option>
-                        <option value="Revel">Revel</option>
-                        <option value="TouchBistro">TouchBistro</option>
-                        <option value="SpotOn">SpotOn</option>
-                        <option value="None">None / Cash Only</option>
-                        <option value="Other">Other</option>
-                    </select>
-                </div>
-            </div>
             
             <div class="form-group">
                 <label for="target_launch_date">Target launch date:</label>
